--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -245,19 +245,19 @@ jobs:
           name: zipped-regional-global-assets
           path: deployment/*.zip  
   
-  notify-end-workflow:
-    name: Send a notification for end of workflow
-    needs:
-      [
-        upload-and-store-job
-      ]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Invoke workflow
-        run: |
-          curl -X POST -H "Accept: application/vnd.github.v3+json" -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          https://api.github.com/repos/${{ env.SOLUTION_ORG }}/${{ env.SOLUTION_NAME }}/actions/workflows/test-workflow.yml/dispatches \
-          -d '{ "ref":"${{ github.ref }}", "inputs": {"run_id": "${{ github.run_id}}}" }'
+  # notify-end-workflow:
+  #   name: Send a notification for end of workflow
+  #   needs:
+  #     [
+  #       upload-and-store-job
+  #     ]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Invoke workflow
+  #       run: |
+  #         curl -X POST -H "Accept: application/vnd.github.v3+json" -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+  #         https://api.github.com/repos/${{ env.SOLUTION_ORG }}/${{ env.SOLUTION_NAME }}/actions/workflows/test-workflow.yml/dispatches \
+  #         -d '{ "ref":"${{ github.ref }}", "inputs": {"run_id": "${{ github.run_id}}}" }'
 
     # environment: notify_env
     # permissions:
