--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -11,9 +11,10 @@ jobs:
   on_success:
     runs-on: ubuntu-latest
     environment: notify_env
-#     permissions:
-#       id-token: write
-#       contents: read
+    permissions:
+      id-token: write
+      contents: read
+      actions: read
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}    
     steps:
       - name: Check out repo
@@ -31,20 +32,20 @@ jobs:
         run: |
           export PAYLOAD=`curl -X GET -H "Accept: application/vnd.github.v3+json" -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ env.SOLUTION_ORG }}/${{ env.SOLUTION_NAME }}/actions/runs/${{ github.event.workflow_run.id }}/artifacts`
           echo PAYLOAD=$PAYLOAD >> $GITHUB_ENV
-#       - name: Configure AWS
-#         run: |
-#           export AWS_ROLE_ARN=${{ secrets.NOTIFY_ROLE }}
-#           export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
-#           export AWS_DEFAULT_REGION=${{ env.REGION }}
-#           export NOTIFICATION_ENDPOINT=${{ secrets.ENDPOINT }}
-        
-#           echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
-#           echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
-#           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
-#           echo NOTIFICATION_ENDPOINT=$NOTIFICATION_ENDPOINT >> $GITHUB_ENV
-
-#           curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE      
-      - name: Invoke endpoint
+      - name: Configure AWS
         run: |
-          cd deployment
-          python end-workflow-notification.py
+          export AWS_ROLE_ARN=${{ secrets.NOTIFY_ROLE }}
+          export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
+          export AWS_DEFAULT_REGION=${{ env.REGION }}
+          export NOTIFICATION_ENDPOINT=${{ secrets.ENDPOINT }}
+        
+          echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
+          echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
+          echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
+          echo NOTIFICATION_ENDPOINT=$NOTIFICATION_ENDPOINT >> $GITHUB_ENV
+
+          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE      
+#       - name: Invoke endpoint
+#         run: |
+#           cd deployment
+#           python end-workflow-notification.py
