--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -17,7 +17,7 @@ jobs:
       actions: read
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}    
     steps:
-      - name: Check out repo
+      - name: Checkout
         uses: actions/checkout@v2
       - name: Install required system packages
         run: |
@@ -28,7 +28,7 @@ jobs:
             exit 1
           fi
       - run: sleep 5 # per doc there is still some kind of race condition
-      - name: Get Artifacts
+      - name: Get artifacts
         run: |
           export PAYLOAD=`curl -X GET -H "Accept: application/vnd.github.v3+json" -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ env.SOLUTION_ORG }}/${{ env.SOLUTION_NAME }}/actions/runs/${{ github.event.workflow_run.id }}/artifacts`
           echo PAYLOAD=$PAYLOAD >> $GITHUB_ENV
@@ -38,14 +38,15 @@ jobs:
           export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
           export AWS_DEFAULT_REGION=${{ env.REGION }}
           export NOTIFICATION_ENDPOINT=${{ secrets.ENDPOINT }}
+          export BRANCH=$GITHUB_REF
         
           echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
           echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
           echo NOTIFICATION_ENDPOINT=$NOTIFICATION_ENDPOINT >> $GITHUB_ENV
-
+          echo BRANCH=$BRANCH >> $GITHUB_ENV
           curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE      
-#       - name: Invoke endpoint
-#         run: |
-#           cd deployment
-#           python end-workflow-notification.py
+      - name: Invoke endpoint
+        run: |
+          cd deployment
+          python end-workflow-notification.py
