--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -38,19 +38,17 @@ jobs:
           export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
           export AWS_DEFAULT_REGION=${{ env.REGION }}
           export NOTIFICATION_ENDPOINT=${{ secrets.ENDPOINT }}
-          export BRANCH=$GITHUB_REF
-        
+          export BRANCH=${{ github.event.workflow_run.head_branch }}
+          export WORKFLOW_NAME=${{ github.event.workflow_run.name }}
+
           echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
           echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
           echo NOTIFICATION_ENDPOINT=$NOTIFICATION_ENDPOINT >> $GITHUB_ENV
           echo BRANCH=$BRANCH >> $GITHUB_ENV
-          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE      
-
-          #debug
-          echo ${{ toJson(github.event.workflow_run) }}
-          echo ${{ toJson(github.event.workflow) }}
+          echo WORKFLOW_NAME=$WORKFLOW_NAME >> $GITHUB_ENV
           
+          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE      
       - name: Invoke endpoint
         run: |
           cd deployment
