--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -1,8 +1,8 @@
 astroid==2.5.2
 attrs==20.3.0
 aws-requests-auth==0.4.3
-aws-sam-cli==1.22.0
-aws-sam-translator==1.35.0
+aws-sam-cli==1.33.0
+aws-sam-translator==1.39.0
 awscli==1.19.47
 blessed==1.17.6
 boto3==1.17.47
@@ -10,10 +10,12 @@ botocore==1.20.47
 build==0.6.0.post1
 certifi==2020.12.5
 cffi==1.14.5
+cfn-lint==0.49.0
 chalice==1.22.3
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+crhelper==2.0.10
 cryptography==3.4.7
 docker==4.2.2
 docutils==0.15.2
@@ -28,23 +30,24 @@ lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
+networkx==2.5.1
 pyasn1==0.4.8
 pycparser==2.20
-pylint==2.7.4
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2021.1
 PyYAML==5.4.1
 readchar==2.0.1
-requests==2.23.0
+redis==3.5.3
+requests==2.25.1
 rsa==4.7.2
 s3transfer==0.3.6
 six==1.15.0
 testresources==2.0.1
 toml==0.10.2
-tomlkit==0.7.0
-urllib3==1.25.11
+tomlkit==0.7.2
+urllib3==1.26.5
 wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
