--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -47,6 +47,7 @@ sonar.python.coverage.reportPaths= \
     source/core-api/lambda_functions/coverage.xml, \
     source/core-api/custom_resources/coverage.xml, \
     source/shared/coverage.xml, \
+    source/shared/virtual-waiting-room-on-aws-common/coverage.xml, \
     source/openid-waitingroom/custom_resources/coverage.xml, \
     source/openid-waitingroom/chalice/coverage.xml, \
     source/sample-inlet-strategies/coverage.xml, \
